Project cleanup since we have separate project for rally api